# openscope-experimental-launcher

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  run_launcher.py  run_module.py  test_interactive_params.py
.github/workflows/: ci.yml  docs.yml  tag_and_publish.yml
docs/: build_trigger.md  code_cleanup_unnecessary_overrides.md  configuration-guide.md  documentation-updates-summary.md  index.rst  requirements.txt  session_builder_refactoring.md
docs/source/: api.rst  architecture.rst  conf.py  configuration-guide.rst  configuration.rst  contributing.md  contributing.rst  documentation-updates-summary.rst  end_state_system.rst  examples.rst  index.rst  installation.rst  launcher-configuration.rst  launcher_metadata.rst  logging.rst  matlab_launcher.rst  modules.rst  parameter_files.rst  post_acquisition.rst  post_processing.rst  pre_acquisition.rst  quickstart.rst  resource-monitoring.rst  rig_config.rst  rig_launchers.rst  state_persistence.rst  troubleshooting.rst
docs/source/api/: base.rst  (+5 more)
examples/: neuropixels_session_builder.py
params/: example_metadata_pipeline.json  example_minimalist_params.json  example_mouse_notes_pipeline.json  experiment_notes_pipeline.json  matlab_local_test_params.json  matlab_slap2.json  predictive_processing_params_example.json  predictive_processing_with_archive.json  session_sync_master_example.json  session_sync_slave_example.json
params/slap2_regimen1/: day1.json  day2.json  day3.json  day4.json
scripts/: example_bonsai_params.json  example_matlab_launcher.py  example_matlab_params.json  example_minimalist_params.json  example_python_launcher.py  example_python_params.json  minimalist_launcher.py  predictive_processing_launcher.py  predictive_processing_params_example.json  slap2_launcher.py
src/openscope_experimental_launcher/: __init__.py
test_sessions/: experiment_notes.txt  mouse_weight.csv
tests/: conftest.py  test_base_experiment.py  test_base_experiment_advanced.py  test_base_launcher.py  test_base_session_builder.py  test_bonsai_fatal_error.py  test_bonsai_interface_extended.py  test_bonsai_launcher.py  test_bonsai_launcher_new.py  test_comprehensive_coverage.py  test_coverage_additional_fixed.py  test_coverage_boost.py  test_disk_space_check_module.py  test_end_state_debug.py  test_example.py  test_example_tool_template.py  test_experiment_notes_modules.py  test_final_coverage_boost.py  test_final_coverage_boost_clean.py  test_git_manager.py  test_git_manager_extended.py  test_github_issue_reporting.py  test_instrument_json_fetch_module.py  test_integration.py  test_launcher_version_enforcement.py  test_matlab_interface.py  test_matlab_launcher_extended.py  test_matlab_slap2_params.py  test_metadata_service_modules.py  test_mindscope_integration.py  test_param_utils.py  test_pipeline_failure_policies.py  test_pipeline_module_types.py  test_post_processing_simple.py  test_pp_stimulus_converter.py  test_predictive_processing_session_csv.py  test_process_monitor.py  test_python_interface.py  test_python_interface_fixed.py  test_python_launcher_extended.py  (+19 more)
tests/data/: 250613103209_test_mouse_3cbfeff6-0d6d-4e73-9280-60667968b725_session_session.json  (+5 more)
(+94 files in other folders)
