[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openscope-experimental-launcher"
description = "Windows-only experimental launcher for OpenScope Bonsai workflows with metadata generation and session tracking."
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
readme = "README.md"
version = "0.2.52"

dependencies = [
    'pandas',
    'aind-data-schema==1.4.0',
    'aind-data-schema-models',
    'psutil',
    'pywin32; sys_platform == "win32"',  # Only install on Windows
    'PyYAML',
    'requests',
    'toml'
]

[project.optional-dependencies]
dev = [
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'furo',
    'pytest',
    'pytest-cov',
    'pytest-mock',
    'pytest-asyncio',
    'pytest-xdist'
]
matlab = [
    'matlabengine'
]

[tool.setuptools.packages.find]
where = ["src"]


[tool.black]
line-length = 79
target_version = ['py310']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_git: marks tests that require git to be installed",
    "requires_bonsai: marks tests that require Bonsai to be installed"
]

[tool.coverage.run]
omit = ["*__init__*", "tests/*", "*/post_acquisition/*"]
source = ["openscope_experimental_launcher"]
branch = true
# Focus coverage on core launcher functionality
include = [
    "*/launchers/*",
    "*/interfaces/*",
    "*/utils/*"
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "^from .* import .*",
    "^import .*",
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]
fail_under = 50
# Exclude post-acquisition tools from coverage requirements
omit = [
    "*/post_acquisition/*"
]

[tool.isort]
line_length = 79
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
